flex/flex-tests/testData/flex_highlighting/FlexWithCss.mxml
<?xml version="1.0" encoding="utf-8"?>

<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml">
  <mx:Style>
    Application {
      disabledColor: undefined;
      <warning descr="Unknown CSS property 'paddingtop'">paddingtop</warning>: 1px;
      disabledSkin: Embed(source="<error descr="Cannot resolve directory 'assets'">assets</error>/<error descr="Cannot resolve file 'Button_disabledSkin.png'">Button_disabledSkin.png</error>", scaleGridRight="61");
      upSkin: ClassReference("<error descr="Cannot resolve package 'domcad'">domcad</error>.<error descr="Cannot resolve class 'FolderTabNavigatorMenuButtonProgrammaticSkin'">FolderTabNavigatorMenuButtonProgrammaticSkin</error>");
      upSkin: ClassReference("mx.core.UIComponent");
      upSkin: ClassReference("FlexWithCss");
    }
    .aaa {}
  </mx:Style>
  <mx:Label styleName="{'aaa'}"/>
</mx:Application>